--- a/mocker-front/src/app/component/schema/modal/relation-config/relation-config.modal.html
+++ b/mocker-front/src/app/component/schema/modal/relation-config/relation-config.modal.html
@@ -34,7 +34,7 @@
       <moc-button (click)='close()'
                   mocClass='tw-ml-1'
                   label='modal.relation_config.ok'
-                  mocStyle='tw-w-12 btn-primary'>
+                  mocStyle='btn-primary'>
       </moc-button>
     </div>
   </div>
