--- a/mocker-front/src/app/shared/modal/choose-parent/choose-parent.modal.html
+++ b/mocker-front/src/app/shared/modal/choose-parent/choose-parent.modal.html
@@ -7,10 +7,11 @@
         <p (click)='selectParent(parent.id)'
            *ngFor='let parent of values.slice(0, 5), let index=index'
            class='tw-font-medium tw-py-2 hover:tw-text-blue tw-cursor-pointer hover:tw-underline tw-uppercase'>
-          {{ (index + 1) + '. ' + parent.name }}
+          {{ (index + 1) + '. ' + parent.name + ': ' + (parent.description | truncate: 30) }}
         </p>
-        <p>{{ 'modal.choose_parent.no_projects' | translate: {entity: options.type} }}</p>
-        <p (click)='viewMore()'
+        <p *ngIf='!values?.length'>{{ 'modal.choose_parent.no_projects' | translate: {entity: options.type} }}</p>
+        <moc-button *ngIf='!values?.length' mocClass='tw-mt-5 tw-mx-auto tw-w-1/2' mocStyle='btn-primary' label='modal.choose_parent.create_new'></moc-button>
+        <p *ngIf='values?.length' (click)='viewMore()'
            class='tw-text-center tw-py-2 tw-text-blue tw-cursor-pointer hover:tw-underline tw-uppercase'>
           {{ 'modal.choose_parent.more' | translate }}
         </p>
