--- a/mocker-front/src/app/shared/component/grid/grid.component.html
+++ b/mocker-front/src/app/shared/component/grid/grid.component.html
@@ -1,8 +1,15 @@
 <div [class]='mocClass' id='main'>
   <div class='tw-flex tw-justify-between'>
-    <moc-button (click)='createAction.click()' mocStyle='btn-primary tw-uppercase'
-                [label]='createAction.content'></moc-button>
-    <moc-input mocClass='tw-w-96' [mocPlaceholder]='searchPlaceholder' [mocControl]='formGroup.controls.search'></moc-input>
+    <div class='tw-flex'>
+      <moc-button (click)='createAction.click()' mocStyle='btn-primary tw-uppercase'
+                  [label]='createAction.content'></moc-button>
+      <moc-dropdown class='tw-ml-5' [options]='roleOptions'>
+        <moc-button [label]='!currentRole ? "Filter by role" : translateService.instant("component.grid." + currentRole.toLowerCase())' mocClass='tw-w-52' icon='fa-solid fa-sort'
+                    mocStyle='tw-text-left btn-secondary'></moc-button>
+      </moc-dropdown>
+    </div>
+    <moc-input mocClass='tw-w-96' [mocPlaceholder]='searchPlaceholder'
+               [mocControl]='formGroup.controls.search'></moc-input>
   </div>
   <table class='tw-w-full tw-mt-5 tw-text-left'>
     <tr class='tw-bg-gray' (mouseleave)='columnActive=""'>
@@ -49,15 +56,15 @@
   </table>
   <div class='tw-flex tw-justify-end tw-mt-5 pagination'>
     <span (click)='selectPage(1)'
-      [class]='(totalPageNumber.length === 1 || currentPageNumber === 1) ? "disable" : "enable"'>{{ '<<' }}</span>
+          [class]='(totalPageNumber.length === 1 || currentPageNumber === 1) ? "disable" : "enable"'>{{ '<<' }}</span>
     <span (click)='selectPage("previous")'
-      [class]='(totalPageNumber.length === 1 || currentPageNumber === 1) ? "disable" : "enable"'>{{ '<' }}</span>
+          [class]='(totalPageNumber.length === 1 || currentPageNumber === 1) ? "disable" : "enable"'>{{ '<' }}</span>
     <span *ngFor='let item of totalPageNumber'
           (click)='selectPage(item)'
-      class='{{ currentPageNumber === item ? "active" : undefined }} enable'>{{ item }}</span>
+          class='{{ currentPageNumber === item ? "active" : undefined }} enable'>{{ item }}</span>
     <span (click)='selectPage("next")'
-      [class]='(totalPageNumber.length === 1 || currentPageNumber === totalPageNumber.length) ? "disable" : "enable"'>{{ '>' }}</span>
+          [class]='(totalPageNumber.length === 1 || currentPageNumber === totalPageNumber.length) ? "disable" : "enable"'>{{ '>' }}</span>
     <span (click)='selectPage(totalPageNumber.length)'
-      [class]='(totalPageNumber.length === 1 || currentPageNumber === totalPageNumber.length) ? "disable" : "enable"'>{{ '>>' }}</span>
+          [class]='(totalPageNumber.length === 1 || currentPageNumber === totalPageNumber.length) ? "disable" : "enable"'>{{ '>>' }}</span>
   </div>
 </div>
