--- a/mocker-front/src/app/shared/layout/component/navigation/navigation.component.html
+++ b/mocker-front/src/app/shared/layout/component/navigation/navigation.component.html
@@ -20,16 +20,16 @@
       <moc-dropdown [options]='options' [header]='header'>
         <div
           class='hover:tw-bg-blue-50 tw-w-9 tw-h-9 tw-flex tw-justify-center tw-items-center tw-rounded-full tw-ml-3 tw-cursor-pointer tw-relative'>
-          <img [src]='avatarUrl' alt='avatar' class='icon tw-rounded-full'/>
+          <div class='tw-w-7 tw-h-7 tw-text-center tw-text-blue tw-font-medium tw-rounded-full tw-bg-blue-light'>{{ applicationConfig.user?.name?.charAt(0)?.toUpperCase() }}</div>
         </div>
         <ng-template #header>
           <div class='tw-bg-blue-solid tw-px-4 tw-py-2.5 tw-flex tw-items-center tw-text-white tw-text-sm'>
             <div class='tw-w-7 tw-h-7 tw-bg-white tw-flex tw-justify-center tw-items-center tw-rounded-full'>
-              <img [src]='avatarUrl' alt='avatar' class='tw-w-6 tw-h-6 tw-rounded-full'/>
+              <div class='tw-w-6 tw-h-6 tw-text-center tw-leading-6 tw-text-blue tw-font-medium tw-rounded-full tw-bg-blue-light'>{{ applicationConfig.user?.name?.charAt(0)?.toUpperCase() }}</div>
             </div>
             <div class='tw-ml-2'>
-              <p class='tw-font-medium'>{{ 'Do Quoc Viet' }}</p>
-              <p class='tw-text-xs tw-text-gray'>{{ 'doquocviet.sept3rd@gmail.com' }}</p>
+              <p class='tw-font-medium'>{{ applicationConfig.user?.name }}</p>
+              <p class='tw-text-xs tw-text-gray'>{{ applicationConfig.user?.username }}</p>
             </div>
           </div>
         </ng-template>
