Config add table to a schemas.

--- a/mocker-front/src/app/component/general/component/general/general.component.html
+++ b/mocker-front/src/app/component/general/component/general/general.component.html
@@ -21,9 +21,7 @@
                 mocStyle='btn-primary'></moc-button>
     <moc-button (click)='preview()' mocClass='tw-w-52 tw-ml-3' label='component.general.preview'
                 mocStyle='tw-px-5 btn-secondary'></moc-button>
-    <moc-button mocClass='tw-w-52 tw-ml-3' label='component.general.save_this_table'
-                mocStyle='tw-px-5 btn-secondary'></moc-button>
-    <moc-button mocClass='tw-w-52 tw-ml-3' icon='fa-solid fa-sort' label='component.general.more'
+    <moc-button (click)='saveToSchema()' mocClass='tw-w-52 tw-ml-3' label='component.general.save_this_table'
                 mocStyle='tw-px-5 btn-secondary'></moc-button>
   </div>
 </div>
