--- a/mocker-front/src/app/component/schema/modal/table-config/table-config.modal.html
+++ b/mocker-front/src/app/component/schema/modal/table-config/table-config.modal.html
@@ -15,7 +15,7 @@
       <div class='tw-flex tw-ml-5'>
         <span class='tw-mt-3'>{{ 'modal.table_config.rows' | translate }}</span>
         <moc-input [mocControl]='formGroup.controls.table.controls.row' mocClass=' tw-ml-5 tw-w-36'
-                   mocPlaceholder='modal.table_config.rows_placeholder'></moc-input>
+                   [mocPlaceholder]='"modal.table_config.rows_placeholder" | translate'></moc-input>
       </div>
       <moc-button (click)='submit()' mocClass='tw-ml-5 tw-w-40' icon='fa-solid fa-floppy-disk'
                   label='modal.table_config.save'
