MOC-74: Fix bugs.

--- a/mocker-front/src/app/component/auth/component/forget-password/forget-password.component.html
+++ b/mocker-front/src/app/component/auth/component/forget-password/forget-password.component.html
@@ -5,8 +5,10 @@
     <p class='tw-text-left tw-mt-4'>{{ 'component.forget_password.instruction' | translate }}</p>
     <moc-input [mocControl]='username'
                [mocPlaceholder]='"component.forget_password.email_address_placeholder" | translate'
-               mocClass='tw-mt-2'
-               mocStyle='{{ isNotExistedUsername ? "invalid" : "" }} tw-mt-2'
+               mocClass='tw-text-left'
+               mocLabel='Your email'
+               [mocRequired]='true'
+               mocStyle='{{ isNotExistedUsername ? "invalid" : "" }}'
                type='email'></moc-input>
     <p *ngIf='isNotExistedUsername'
        class='tw-mt-2 tw-text-red'>{{ 'component.forget_password.username_not_exist' | translate }}</p>
