--- a/mocker-front/src/app/component/auth/modal/change-password/change-password.modal.html
+++ b/mocker-front/src/app/component/auth/modal/change-password/change-password.modal.html
@@ -1,22 +1,25 @@
-<div [modal]='this' id='main' popup>
-  <div [formGroup]='formGroup' class='tw-text-sm tw-w-112 ptw--5'>
+<div [modal]='this' [dialog]='!options.isDialog' id='main' popup>
+  <div [formGroup]='formGroup' class='tw-p-5 tw-text-sm tw-w-112 ptw--5'>
     <p class='tw-text-center tw-font-bold tw-text-gray'>{{ 'modal.change_password.title' | translate }}</p>
     <img alt='change_password' class='tw-w-32 tw-mt-4 tw-mx-auto' ngSrc='assets/png/auth/change_password.png'
          height='256' width='256'/>
     <p *ngIf='!isShowOldPassword' class='tw-mt-4 tw-text-gray'>{{ 'modal.change_password.instruction' | translate }}</p>
     <moc-input *ngIf='isShowOldPassword'
                [mocControl]='formGroup.controls.oldPassword'
+               [mocAutoComplete]='false'
                [mocPlaceholder]='"modal.change_password.old_password_placeholder" | translate'
                mocLabel='modal.change_password.old_password'
+               mocStyle='tw-mt-2'
                type='password'></moc-input>
     <moc-input [mocControl]='formGroup.controls.newPassword'
                [mocPlaceholder]='"modal.change_password.new_password_placeholder" | translate'
                mocLabel='modal.change_password.new_password'
+               mocStyle='tw-mt-2'
                type='password'></moc-input>
     <moc-input [mocControl]='formGroup.controls.confirmPassword'
                [mocPlaceholder]='"modal.change_password.confirm_password_placeholder" | translate'
-               [mocStyle]='isPasswordNotMatch ? "invalid" : ""'
                mocLabel='modal.change_password.confirm_password'
+               mocStyle='{{ isPasswordNotMatch ? "invalid" : "" }} tw-mt-2'
                type='password'></moc-input>
     <p *ngIf='isPasswordNotMatch'
        class='tw-text-red tw-text-center tw-mt-2'>{{ 'modal.change_password.password_not_match' | translate }}</p>
