--- a/mocker-front/src/app/component/auth/modal/verification/verification.modal.html
+++ b/mocker-front/src/app/component/auth/modal/verification/verification.modal.html
@@ -1,5 +1,5 @@
 <div [dialog]='true' [modal]='this' id='main' popup>
-  <div class='tw-text-sm tw-w-125'>
+  <div class='tw-text-sm tw-p-5 tw-w-125'>
     <p class='tw-text-center tw-text-gray tw-font-bold tw-mt-4'>{{ 'modal.verification.check_email' | translate }}</p>
     <img alt='email' class='tw-w-32 tw-mt-4 tw-mx-auto' src='assets/png/auth/email.svg'/>
     <p class='tw-mt-4 tw-text-gray'>{{ 'modal.verification.instruction' | translate }}</p>
