--- a/mocker-front/src/app/component/auth/component/sign-up/sign-up.component.html
+++ b/mocker-front/src/app/component/auth/component/sign-up/sign-up.component.html
@@ -3,17 +3,26 @@
        class='tw-w-100 tw-bg-white tw-rounded tw-drop-shadow-2xl tw-text-sm tw-text-center tw-p-10'>
     <img alt='logo' class='tw-w-44 tw-mx-auto' src='assets/png/logo.png'/>
     <p class='tw-font-bold tw-mt-5 text-primary-solid'>{{ 'component.sign_up.title' | translate }}</p>
-    <moc-input [mocControl]='formGroup.controls.username'
+    <moc-input [mocRequired]='true'
+               mocLabel='Your email'
+               mocClass='tw-text-left'
+               [mocControl]='formGroup.controls.username'
                [mocPlaceholder]='"component.sign_up.email_address_placeholder" | translate'
                mocStyle='{{ isExistedUsername ? "invalid" : "" }} tw-mt-2'
                type='email'></moc-input>
     <p *ngIf='isExistedUsername'
        class='tw-text-red tw-text-center tw-mt-2'>{{ 'component.sign_up.exist_username' | translate }}</p>
-    <moc-input [mocControl]='formGroup.controls.password'
-               [mocPlaceholder]='"component.sign_up.password_placeholder" | translate'
+    <moc-input [mocRequired]='true'
+               mocLabel='Your password'
+               mocClass='tw-text-left'
                mocStyle='tw-mt-2'
+               [mocControl]='formGroup.controls.password'
+               [mocPlaceholder]='"component.sign_up.password_placeholder" | translate'
                type='password'></moc-input>
-    <moc-input [mocControl]='formGroup.controls.confirmPassword'
+    <moc-input [mocRequired]='true'
+               mocLabel='Your confirmation password'
+               mocClass='tw-text-left'
+               [mocControl]='formGroup.controls.confirmPassword'
                [mocPlaceholder]='"component.sign_up.confirm_password_placeholder" | translate'
                mocStyle='{{ isPasswordNotMatch ? "invalid" : "" }} tw-mt-2'
                type='password'></moc-input>
