--- a/mocker-front/src/app/component/general/component/general/general.component.html
+++ b/mocker-front/src/app/component/general/component/general/general.component.html
@@ -4,14 +4,14 @@
   <moc-table-detail [fields]='formGroup.controls.table.controls.fields' mocClass='tw-mt-10'></moc-table-detail>
   <hr class='tw-mt-5'/>
   <div [formGroup]='formGroup' class='tw-flex tw-mt-5'>
-    <span class='tw-mt-3 tw-mr-5'>{{ 'component.general.row' | translate }}</span>
-    <moc-input [mocControl]='formGroup.controls.table.controls.row' mocClass='tw-w-24' mocStyle='tw-px-5'></moc-input>
-    <span class='tw-mt-3 tw-mx-5'>{{ 'component.general.format' | translate }}</span>
+    <span class='tw-mt-3 tw-mr-5'>{{ ('component.general.row' | translate) + ' *' }}</span>
+    <moc-input [mocControl]='formGroup.controls.table.controls.row' mocClass='tw-w-24' mocStyle='tw-px-2'></moc-input>
+    <span class='tw-mt-3 tw-mx-5'>{{ ('component.general.format' | translate) + ' *' }}</span>
     <moc-dropdown [options]='formats'>
       <moc-button [label]='formGroup.controls.format.value' mocClass='tw-w-32' icon='fa-solid fa-sort'
                   mocStyle='tw-text-left btn-secondary'></moc-button>
     </moc-dropdown>
-    <span *ngIf='isShowTableNameField' class='tw-mt-3 tw-mx-5'>{{ 'component.general.table_name' | translate }}</span>
+    <span *ngIf='isShowTableNameField' class='tw-mt-3 tw-mx-5'>{{ ('component.general.table_name' | translate) + ": *" }}</span>
     <moc-input *ngIf='isShowTableNameField' [mocControl]='formGroup.controls.table.controls.name' mocClass='tw-w-32'
                mocStyle='tw-px-5'></moc-input>
   </div>
