--- a/mocker-front/src/app/component/group/component/group/group.component.html
+++ b/mocker-front/src/app/component/group/component/group/group.component.html
@@ -2,10 +2,10 @@
   <div class='tw-w-96 tw-h-full tw-border tw-border-t-0 tw-p-5 tw-relative'>
     <p class='tw-text-3xl tw-font-medium'>{{ 'component.group.group' | translate }}</p>
     <div>
-      <moc-input [mocControl]='formGroup.controls.name' mocLabel='component.group.name'></moc-input>
-      <moc-input [mocControl]='formGroup.controls.description' [mocTextArea]='true'
+      <moc-input [mocRequired]='true' [mocControl]='formGroup.controls.name' mocLabel='component.group.name'></moc-input>
+      <moc-input [mocRequired]='true' [mocControl]='formGroup.controls.description' [mocTextArea]='true'
                  mocLabel='component.group.description'
-                 mocStyle='tw-min-h-86 tw-overflow-auto'></moc-input>
+                 mocStyle='tw-min-h-32 tw-overflow-auto'></moc-input>
       <div class='tw-mt-3 tw-flex tw-justify-between tw-items-center'>
         <moc-button (click)='submit()' icon='fa-solid fa-floppy-disk'
                     label='component.group.save'
