--- a/mocker-front/src/app/component/schema/modal/table-config/table-config.modal.html
+++ b/mocker-front/src/app/component/schema/modal/table-config/table-config.modal.html
@@ -7,20 +7,21 @@
                       mocStyle='tw-h-150 tw-overflow-y-auto'></moc-table-detail>
     <div class='tw-mt-5 tw-flex'>
       <div class='tw-flex'>
-        <span class='tw-mt-3'>{{ 'modal.table_config.table_name' | translate }}</span>
+        <span class='tw-mt-3'>{{ ('modal.table_config.table_name' | translate) + ' *' }}</span>
         <moc-input [mocControl]='formGroup.controls.table.controls.name' mocClass='tw-ml-5'
                    mocStyle='tw-uppercase'
                    [mocPlaceholder]='"modal.table_config.table_name_placeholder" | translate'></moc-input>
       </div>
       <div class='tw-flex tw-ml-5'>
-        <span class='tw-mt-3'>{{ 'modal.table_config.rows' | translate }}</span>
+        <span class='tw-mt-3'>{{ ('modal.table_config.rows' | translate) + ' *' }}</span>
         <moc-input [mocControl]='formGroup.controls.table.controls.row' mocClass=' tw-ml-5 tw-w-36'
                    [mocPlaceholder]='"modal.table_config.rows_placeholder" | translate'></moc-input>
       </div>
       <moc-button (click)='submit()' mocClass='tw-ml-5 tw-w-40' icon='fa-solid fa-floppy-disk'
                   label='modal.table_config.save'
                   mocStyle='btn-primary tw-text-left'></moc-button>
-      <moc-button (click)='delete()' mocClass='tw-ml-5 tw-w-56' icon='fa-solid fa-trash' label='modal.table_config.delete'
+      <moc-button [readonly]='!table?.id' (click)='delete()' mocClass='tw-ml-5 tw-w-56' icon='fa-solid fa-trash'
+                  label='modal.table_config.delete'
                   mocStyle='btn-primary-red tw-text-left'></moc-button>
       <moc-button (click)='close()' mocClass='tw-ml-5 tw-w-40'
                   icon='fa-solid fa-right-from-bracket'
