--- a/mocker-front/src/app/shared/layout/component/navigation/navigation.component.html
+++ b/mocker-front/src/app/shared/layout/component/navigation/navigation.component.html
@@ -14,7 +14,8 @@
     </nav>
     <div class='tw-flex tw-items-center tw-text-lg'>
       <div
-        class='hover:tw-bg-blue-50 tw-w-9 tw-h-9 tw-flex tw-justify-center tw-items-center tw-rounded-full tw-ml-3 tw-cursor-pointer'>
+        class='hover:tw-bg-blue-50 tw-w-9 tw-h-9 tw-flex tw-justify-center tw-items-center tw-rounded-full tw-ml-3 tw-cursor-pointer'
+        routerLink="/">
         <i class='fa-regular fa-circle-question'></i>
       </div>
       <moc-dropdown [options]='options' [header]='header'>
